[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/homespun.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/PlayButton.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Ghost Mansion.png" type="Texture" id=4]
[ext_resource path="res://Assets/defualt.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.772549, 0.470588, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 7
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.556863, 0.337255, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 7
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=1]
size = 37
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.5, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -3.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "title"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector2( 8, 10 ), Vector2( 8, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -3.0, 3.0 ]
}

[sub_resource type="DynamicFont" id=8]
size = 14
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Mute" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 69.0
margin_bottom = 33.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = " Mute "

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 9.5
margin_top = 8.0
margin_right = 502.5
margin_bottom = 84.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 0.568627, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "Ghost Mansion"
align = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = -37.5
margin_right = 91.5
margin_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
rect_rotation = -3.0
rect_pivot_offset = Vector2( 135, 60 )
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
margin_right = 265.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 80, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = " Play "

[node name="Info & Controls" type="Button" parent="Buttons"]
margin_top = 43.0
margin_right = 265.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 80, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = " Info & Controls "

[node name="Leaderboard" type="Button" parent="Buttons"]
margin_top = 86.0
margin_right = 265.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 80, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "Leaderboard"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "title"
anims/RESET = SubResource( 6 )
anims/title = SubResource( 7 )

[node name="GhostMansion" type="Sprite" parent="."]
position = Vector2( 244, 147 )
scale = Vector2( 9.35, 9.35 )
z_index = -5
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 127.0
margin_right = 445.0
margin_bottom = 160.0
rect_rotation = -22.83
custom_fonts/font = SubResource( 8 )
text = "\"I think you can double jump\""

[node name="Label2" type="Label" parent="."]
margin_left = 256.0
margin_top = 238.0
margin_right = 740.0
margin_bottom = 271.0
rect_rotation = 6.31624
custom_fonts/font = SubResource( 8 )
text = "\"Maybe reach the roof to win?\""

[node name="Label3" type="Label" parent="."]
margin_left = 9.0
margin_top = 297.0
margin_right = 493.0
margin_bottom = 330.0
rect_rotation = -4.94692
custom_fonts/font = SubResource( 8 )
text = "\"I wonder if you can bounce off the ghost...\""

[connection signal="pressed" from="Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Info & Controls" to="." method="_on_Info__Controls_pressed"]
[connection signal="pressed" from="Buttons/Leaderboard" to="." method="_on_Leaderboard_pressed"]
